# SSAO-demo

./: .gitignore  CMakeLists.txt  README.md
data/shader/: blur.fs  geometry.fs  geometry.vs  lighting_nossao.fs  lighting_ssao.fs  ssao.fs  ssao.vs
src/: CMakeLists.txt  main.cpp  mesh.h  model.h  shader.h
